--- a/src/main/webapp/view/login/meuPerfil/perfil.xhtml
+++ b/src/main/webapp/view/login/meuPerfil/perfil.xhtml
@@ -6,7 +6,11 @@
 	xmlns:p="http://primefaces.org/ui"
 	template="/WEB-INF/templates/template.xhtml">
 	<ui:define name="content">
-		<h1><h:outputText value="#{messages.menu_perfil}" /></h1>
+		<br/>
+		<br/>
+		<h2 class="form-signin-heading">
+			<h:outputText value="#{messages.menu_perfil}" />
+		</h2>
 
 		<h:form id="perfilForm">
 			<!-- MENSAGENS -->
@@ -26,13 +30,15 @@
 			</p:panel>
 
 			<h:panelGroup id="botoes" style="text-align: left;">
-				<p:commandButton value="#{messages.botao_salvar}" ajax="false" action="#{usuarioMB.salvar}" rendered="#{usuarioMB.operacaoInserir}"/>
+				<p:commandButton value="#{messages.botao_salvar}" ajax="false" action="#{usuarioMB.salvar}" rendered="#{usuarioMB.operacaoInserir}"
+					styleClass="btn btn-lg btn-success" />
 				
-				<p:commandButton value="#{messages.botao_salvar}" ajax="false" action="#{usuarioMB.salvarSenha}"  rendered="#{usuarioMB.operacaoAlterar}"/>
+				<p:commandButton value="#{messages.botao_salvar}" ajax="false" action="#{usuarioMB.salvarSenha}"  rendered="#{usuarioMB.operacaoAlterar}"
+					styleClass="btn btn-lg btn-success" />
 
-				<p:commandButton value="#{messages.botao_cancelar}" ajax="false" action="#{usuarioMB.inicializar}" immediate="true" rendered="#{usuarioMB.operacaoAlterar}"/>
+				<p:commandButton value="#{messages.botao_cancelar}" ajax="false" action="#{usuarioMB.inicializar}" immediate="true" rendered="#{usuarioMB.operacaoAlterar}"
+					styleClass="btn btn-lg btn-warning" />
 				
-				<p:commandButton value="#{messages.botao_cancelar}" ajax="false" action="#{usuarioMB.exibirPaginaInicial}" immediate="true" rendered="#{usuarioMB.operacaoConsultar}"/>
 			</h:panelGroup>
 			<br />
 
